--- a/styles/styles.css
+++ b/styles/styles.css
@@ -830,6 +830,119 @@ body {
 
 .categories-text {
   margin-top: 32px;
+  margin-bottom: 12px;
+}
+
+.delivery-wrapper {
+  width: 1440px;
+  height: 289px;
+  background-color: #F0F0F0;
+  margin: auto;
+  margin-top: 172px;
+}
+
+.delivery-container {
+  width: 1160px;
+  margin: auto;
+  display: flex;
+  background-image: url("../images/delivery/delivery.svg");
+  background-repeat: no-repeat;
+  background-position: 961px 78px;
+  transform: translateY(-101px);
+}
+
+.delivery-list {
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+  border-right: 7px solid #000000;
+  width: 280px;
+}
+
+.delivery-item {
+  display: flex;
+  flex-direction: column;
+}
+
+.delivery-item:nth-of-type(1) {
+  padding-top: 64px;
+}
+
+.delivery-item:last-child {
+  padding-bottom: 65px;
+}
+
+.delivery-item-button {
+  font-family: "raleway", sans-serif;
+  font-size: 18px;
+  line-height: 21px;
+  letter-spacing: 0.2em;
+  text-transform: uppercase;
+  border: none;
+  width: 280px;
+  height: 40px;
+  padding: 0;
+  cursor: pointer;
+  text-align: left;
+  background-image: url("../images/delivery/Rectangle.png");
+  background-repeat: no-repeat;
+  background-position: left;
+  background-color: rgba(255, 255, 255, 0);
+}
+
+.delivery-item-button + .delivery-item-button {
+  margin-top: 35px;
+}
+
+.delivery-item-button:hover {
+  background-color: #FFE17F;
+}
+
+.delivery-item-button:focus-visible {
+  outline: 2px solid #AF4FFF;
+}
+
+.delivery-item-button:active {
+  background-color: #FFCC33;
+  background-image: none;
+}
+
+.delivery-item-button-current {
+  background-color: #000000;
+  color:#FFE17F;
+  background-image: none;
+}
+
+.delivery-item-button-current:hover {
+  background-color: #000000;
+  color: rgba(255, 225, 127, 0.5);
+}
+
+.delivery-item-button-current:active {
+  background-color: #000000;
+  color: rgba(255, 225, 127, 0.3);
+}
+
+.delivery-text {
+  text-align: center;
+  width: 164px;
+  display: inline-block;
+}
+
+.delivery-desc {
+  margin-left: 116px;
+  width: 453px;
+}
+
+.delivery-desc-title {
+  font-family: "raleway", sans-serif;
+  font-size: 50px;
+  line-height: 50px;
+  margin-top: 74px;
+  margin-bottom: 34px;
+}
+
+.delivery-desc-text {
 }
 
 .hidden {
