--- a/styles/styles.css
+++ b/styles/styles.css
@@ -977,17 +977,35 @@ body {
 .delivery-wrapper-button {
   width: 1160px;
   min-height: 100px;
-  margin-left: 100px;
   display: flex;
   margin: auto;
+  margin-top: 40px;
   justify-content: space-between;
   border: none;
   padding: 0;
   cursor: pointer;
+  background-color: #F0F0F0;
+}
+
+.delivery-wrapper-button:hover .button-image {
+  background-color: #FFC700;
+}
+
+.delivery-wrapper-button:hover .button-icon {
+  opacity: 1;
+}
+
+.delivery-wrapper-button:active {
+  opacity: 0.3;
+}
+
+.delivery-wrapper-button:focus-visible {
+  outline: 2px solid #AF4FFF;
+  outline-offset: 2px;
 }
 
 .button-image {
-  width: 125px;
+  min-width: 125px;
   min-height: 100px;
   background-color: #FFE17F;
   background-image: url("../images/delivery/delivery-car.svg");
@@ -1001,17 +1019,17 @@ body {
   line-height: 23px;
   letter-spacing: 0.2em;
   text-transform: uppercase;
-  align-self: center;
-
+  padding-top: 40px;
+  padding-left: 5px;
 }
 
 .button-icon {
-  display: inline-block;
-  width: 125px;
+  min-width: 125px;
   height: 100px;
   background-image: url("../images/delivery/delivery-icon.svg");
   background-repeat: no-repeat;
   background-position: center;
+  opacity: 0.5;
 }
 
 .hidden {
