--- a/styles/styles.css
+++ b/styles/styles.css
@@ -454,6 +454,8 @@ body {
   margin: 0;
   padding: 0;
   margin-left: auto;
+  position: relative;
+  z-index: 1;
 }
 
 .product-catalog-item {
@@ -501,7 +503,7 @@ body {
   margin-top: 19px;
 }
 
-.contacts {
+.contact {
   margin-right: 56px;
   margin-top: 19px;
 }
@@ -979,7 +981,8 @@ body {
   min-height: 100px;
   display: flex;
   margin: auto;
-  margin-top: 40px;
+  margin-top: 70px;
+  margin-bottom: 70px;
   justify-content: space-between;
   border: none;
   padding: 0;
@@ -1030,6 +1033,154 @@ body {
   background-repeat: no-repeat;
   background-position: center;
   opacity: 0.5;
+}
+
+.description-wrapper {
+  display: flex;
+  width: 1160px;
+  margin: auto;
+  justify-content: space-between;
+}
+
+.description {
+  width: 500px;
+}
+
+.contacts {
+  width: 532px;
+}
+
+.pic {
+  display: block;
+  width: 84px;
+  height: 7px;
+  background-color:#000000;
+}
+
+:is(.description-title, .contacts-title) {
+  font-family: "raleway", sans-serif;
+  font-size: 50px;
+  line-height: 50px;
+  margin: 0;
+  margin-top: 40px;
+  margin-bottom: 48px;
+}
+
+:is(.description-text, .contacts-text) {
+  color: #444444;
+  margin: 0;
+  margin-bottom: 30px;
+}
+
+.text-time {
+  margin-bottom: 36px;
+}
+
+.description-list {
+  font-weight: 700;
+  font-size: 18px;
+  line-height: 20px;
+  letter-spacing: -0.02em;
+  margin: 0;
+  margin-bottom: 36px;
+  padding-left: 36px;
+  list-style-type: none;
+}
+
+.description-item {
+  margin-bottom: 19px;
+  position: relative;
+}
+
+.description-item::before {
+  width: 8px;
+  height: 8px;
+  border-radius: 50%;
+  background-color: #FFC700;
+  position: absolute;
+  content: "";
+  top: 50%;
+  transform: translateY(-50%);
+  left: -34px;
+}
+
+.description-button {
+  font-family: "raleway", sans-serif;
+  font-size: 18px;
+  line-height: 21px;
+  letter-spacing: 0.2em;
+  text-transform: uppercase;
+  color: #000000;
+  text-decoration: none;
+  margin-top: 21px;
+  padding: 10px 21px 10px 23px;
+  position: relative;
+}
+
+:is(.description-button, .contacts-button):hover {
+  background-color: #FFE17F;
+}
+
+:is(.description-button, .contacts-button):focus-visible {
+  outline: 2px solid #AF4FFF;
+}
+
+:is(.description-button, .contacts-button):active {
+  background-color: #FFCC33;
+}
+
+.button-link::before {
+  position: absolute;
+  content: "";
+  width: 100%;
+  height: 8px;
+  background-color: #FFE17F;
+  top: 50%;
+  transform: translateY(-50%);
+  z-index: -1;
+  display: block;
+}
+
+.contacts-text-title {
+  color: #444444;
+  font-weight: 700;
+  font-size: 24px;
+  line-height: 30px;
+  margin-bottom: 15px;
+}
+
+.address-text {
+  font-style: normal;
+}
+
+.contacts-button {
+  font-family: "raleway", sans-serif;
+  font-size: 18px;
+  line-height: 21px;
+  letter-spacing: 0.2em;
+  text-transform: uppercase;
+  color: #000000;
+  text-decoration: none;
+  margin-top: 21px;
+  padding: 10px 29px 10px 35px;
+  position: relative;
+}
+
+.contacts-link {
+  color: #444444;
+  text-decoration-line: none;
+  position: relative;
+  display: inline-block;
+  margin-bottom: 7px;
+}
+
+.contacts-link::before {
+  position: absolute;
+  content: "";
+  background-color: #444444;
+  width: 100%;
+  height: 1px;
+  bottom: 7px;
 }
 
 .hidden {
