--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1039,6 +1039,7 @@ body {
   display: flex;
   width: 1160px;
   margin: auto;
+  margin-bottom: 73px;
   justify-content: space-between;
 }
 
@@ -1181,6 +1182,38 @@ body {
   width: 100%;
   height: 1px;
   bottom: 7px;
+}
+
+.subscription {
+  width: 1440px;
+  min-height: 421px;
+  background-color: #F0F0F0;
+  margin: 0 auto;
+}
+
+.subscription-wrapper {
+  display: flex;
+  width: 1160px;
+  margin: 0 auto;
+}
+
+.subscription-title {
+  font-family: "raleway", sans-serif;
+  font-size: 50px;
+  line-height: 50px;
+  width: 348px;
+  padding-left: 8px;
+  margin: 0;
+  margin-top: 64px;
+}
+
+.subscription-text {
+  color: #444444;
+  width: 528px;
+  margin-top: 74px;
+  margin-left: 243px;
+  padding-left: 8px;
+  word-spacing: -0.01em;
 }
 
 .hidden {
